# LLM-DSS

./: .gitignore  README.md  app.py  data_load.py  data_preprocess.py  data_process.py  extract_text.py  main.py  pyproject.toml  requirements.txt
scripts/: data_load.py  data_preprocess.py  extract_text.py
src/: app.py  evaluation.py  main.py
