[project]
name = "llm-dss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.21",
    "nltk>=3.9.1",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "streamlit>=1.49.1",
]
